tests/array/array_lit_wrong_length_errors.err.expected
error: at 5:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is [i64; 3], RHS is [i64; 2]
   |
 5 |             a = [1i64, 2i64];
   |             ^^^^^^^^^^^^^^^^
